--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,6 @@ main{margin-bottom: 420px;
 .breadcrumbsAll{
 	text-align: center;
 	height: 26px;	
-	margin-top: 3.5%;
 	margin-right: 7px;
 }
 .breadcrumbsAll a{
@@ -279,9 +278,10 @@ main{margin-bottom: 420px;
 	margin: 39px 0;
 	font-size: 28px;
 	font-family: "Georgia";
+	letter-spacing: 2px;
 }
 .description{
-	font-family: "Myriad Pro";
+	font-family: "OpenSansLight";
 	font-size: 14px;
 	line-height: 30px;	
 	margin-bottom: 15px;
@@ -343,10 +343,10 @@ main{margin-bottom: 420px;
 	margin: 0 0 40px 0;
 }
 .down-sports-manship{
-	font-size: 14px;
+	font-size: 12px;
 	font-family: "OpenSansLight";
 	line-height: 16px;
-	letter-spacing: 1	px;
+	letter-spacing: 1px;
 }
 .questions{
 	margin-top: 30px;
@@ -359,7 +359,6 @@ main{margin-bottom: 420px;
 
 /*********************  HIDE 1  ****************************/
 
-
 .hide {
     display: none; 
 }
@@ -371,20 +370,23 @@ main{margin-bottom: 420px;
     padding: 7px 0;
 	color: black;
 	text-decoration: none;
-	font-family: "OpenSans";
+	font-family: "Open Sans";
 	font-size: 18px;
 	border-bottom:  1px dashed black;
+
 }
 label:hover{
 	cursor: pointer;
 }
 label i{
 	margin-right: 6px;
+
 }
 /* вид текста label при активном переключателе */
 .hide:checked + label {
     color: #fe7373;
     border-bottom: 1px dashed #fe7373;
+
 }
 /* когда чекбокс активен показываем блоки с содержанием  */
 .hide:checked + label + div {
@@ -394,6 +396,22 @@ label i{
     font-family: "OpenSansLight";
     color: #616161;
     line-height: 30px;
+    -webkit-animation:fade ease-in 0.5s; 
+     -moz-animation:fade ease-in 0.5s;
+     animation:fade ease-in 0.5s; 
+
+}
+@-moz-keyframes fade {
+    from { opacity: 0; }
+to { opacity: 1 }
+}
+@-webkit-keyframes fade {
+    from { opacity: 0; }
+to { opacity: 1 }
+}
+@keyframes fade {
+    from { opacity: 0; }
+to { opacity: 1 }   
 }
 /*********************  HIDE 2  ****************************/
 .hide-2 {
@@ -406,7 +424,7 @@ label i{
 .hide-2 + label {
     padding: 0;
 	text-decoration: none;
-	font-family: "OpenSans";
+	font-family: "OpenSansLight";
 	font-size: 14px;
 	color: #fe7373;
 	border-bottom: 1px solid #fe7373;
@@ -424,6 +442,9 @@ label i{
     color: #616161;
     line-height: 30px;
     margin-top: 20px;
+    -webkit-animation:fade ease-in 0.5s; 
+     -moz-animation:fade ease-in 0.5s;
+     animation:fade ease-in 0.5s; 
 }
 
 /*********************  HIDE 3  ****************************/
@@ -438,7 +459,7 @@ label i{
 .hide-3 + label {
     padding: 0;
 	text-decoration: none;
-	font-family: "OpenSans";
+	font-family: "OpenSansRegular";
 	font-size: 14px;
 	color: #fe7373;
 	border-bottom: 1px solid #fe7373;
@@ -456,6 +477,9 @@ label i{
     color: #616161;
     line-height: 30px;
     margin-top: 20px;
+    -webkit-animation:fade ease-in 0.5s; 
+     -moz-animation:fade ease-in 0.5s;
+     animation:fade ease-in 0.5s; 
 }
 
 
@@ -486,10 +510,10 @@ label i{
 }
 .about-location{
 	font-size: 11.5px;
-	font-family: "OpenSans";
+	font-family: "Open Sans";
 	letter-spacing: 1px;
 	color: #000;
-	padding-left: 16px;
+	padding: 0 16px;
 	margin-bottom: 45px;
 }
 .about-location p {
